@@ -7,7 +7,8 @@
    should be added to this file.
 
    March 30, 1999
-   Chuck McParland */
+   Chuck McParland
+   Modified (fixed) J. Jacobsen 2005-2006 */
 
 #ifndef _MESSAGE_API_STATUS_
 #define _MESSAGE_API_STATUS_
@@ -16,50 +17,23 @@
    or-ing the appropriate status value with the
    appropriate logging request value and the 
    appropriate error severity value.
-   e.g. BYTE status=(UNKNOWN_SERVER|LOG_REQUEST)
-  		|FATAL_ERROR;
+   e.g. BYTE status=(UNKNOWN_SERVER|FATAL_ERROR);
    Since all services share the same error "space",
    errors should be kept fairly generic.  Detailed
    information about a particular service's error
    can be obtained by a message query to that service
-   (see SubTypes).
+   (see SubTypes). */
   
-   Note that only 31 status values are available. */
-
-/* This was broken - you can't OR these together 
-   if they aren't powers of 2!!! --JEJ
-   enum Status {
-   SUCCESS=1,
-   UNKNOWN_SERVER,
-   SERVER_STACK_FULL,
-   UNKNOWN_SUBTYPE,
-   SERVER_PROTOCOL_ERROR,
-   DATA_NOT_FOUND,
-   OBJECT_NOT_FOUND,
-   SERVICE_SPECIFIC_ERROR,
-   LAST_STATUS=31
-   };
-*/
-
 #define BIT(n) (1<<(n))
 /* Can only have 8 of these, status is 8 bits */
-#define SUCCESS                BIT(0)
-#define UNKNOWN_SERVER         BIT(1)
-#define SERVER_STACK_FULL      BIT(2)
-#define UNKNOWN_SUBTYPE        BIT(3)
-#define SERVER_PROTOCOL_ERROR  BIT(4)
-#define DATA_NOT_FOUND         BIT(5)
-#define OBJECT_NOT_FOUND       BIT(6)
-#define SERVICE_SPECIFIC_ERROR BIT(7)
-
-/* logging request bit masks */
-#define NO_LOG_REQUEST 0x00
-#define LOG_REQUEST 0x80
-/* error severity bit masks */
-#define FATAL_ERROR 0x60
-#define SEVERE_ERROR 0x40
-#define WARNING_ERROR 0x20
-#define INFORM_ERROR 0x00
+#define SUCCESS                BIT(0)  /* 0x01 */
+#define UNKNOWN_SERVER         BIT(1)  /* 0x02 */
+#define INFORM_ERROR           BIT(2)  /* 0x04 */
+#define UNKNOWN_SUBTYPE        BIT(3)  /* 0x08 */
+#define FATAL_ERROR            BIT(4)  /* 0x10 */
+#define WARNING_ERROR          BIT(5)  /* 0x20 */
+#define SEVERE_ERROR           BIT(6)  /* 0x40 */
+#define SERVICE_SPECIFIC_ERROR BIT(7)  /* 0x80 */
 
 /* message API type values. 
    Note 255 values are available for this field. */ 
