@@ -933,11 +933,11 @@ Message Handler Messages </font> (message type 1):</b>
       </td>
       <td valign="top" width="24">
       <p style="" align="center"> <font style="font-size: 9pt;"
- size="2">UL</font></p>
+ size="2">S</font></p>
       </td>
       <td valign="top" width="110">
       <p style="" align="center"> <font style="font-size: 9pt;"
- size="2">dom id</font></p>
+ size="2">dom id (12 bytes)</font></p>
       </td>
     </tr>
     <tr>
@@ -3496,6 +3496,65 @@ monitoring buffer, eliminating any existing monitoring records<br>
  style="width: 566px; vertical-align: middle; text-align: center;">
       <p style="" align="left"> <font style="font-size: 11pt;" size="2"><b>Return
 1 if any monitoring records are available, else 0<br>
+      </b></font></p>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<a name="DATA_ACC_GET_NUMOVERFLOWS"></a><br>
+<table
+ style="width: 576px; text-align: left; margin-left: auto; margin-right: auto; page-break-before: auto;"
+ border="1" bordercolor="#000000" cellpadding="4" cellspacing="0">
+  <thead><tr valign="top">
+    <th width="28">
+    <p style="">ID</p>
+    </th>
+    <th style="text-align: center;" width="242">
+    <p style="">Subtype</p>
+    </th>
+    <th style="width: 130px; text-align: center;">
+    <p style="">Input</p>
+    </th>
+    <th width="142">
+    <p style="text-align: center;">Output</p>
+    </th>
+  </tr>
+  </thead> <tbody>
+    <tr>
+      <td sdval="22" sdnum="1033;" width="28">
+      <p style="" align="right">31<br>
+      </p>
+      </td>
+      <td width="242">
+      <p style="" align="center"> <font style="font-size: 11pt;"
+ size="2">DATA_ACC_GET_NUMOVERFLOWS</font></p>
+      </td>
+      <td valign="top" width="130">
+      <p style="" align="center"> </p>
+      <div style="text-align: center;">-<br>
+      </div>
+      </td>
+      <td valign="top" width="142">
+      <p style="" align="center"> </p>
+      <table style="width: 100%; height: 100%;" border="0"
+ bordercolor="#000000" cellpadding="4" cellspacing="0">
+        <tbody>
+          <tr>
+            <td style="vertical-align: top;">UL:<br>
+            </td>
+            <td style="vertical-align: top;">numOverFlows<br>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="4"
+ style="width: 566px; vertical-align: middle; text-align: center;">
+      <p style="" align="left"> <font style="font-size: 11pt;" size="2"><b>Returns
+number of overflows since domapp started<br>
       </b></font></p>
       </td>
     </tr>
